[tool.poetry]
name = "plumed-tools"
version = "0.1.0"
description = ""
authors = ["Cloudac7 <scottryuu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
ase = "^3.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
